fixed scroll issue on mobile devices

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -96,3 +96,8 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+
+html body {
+  overflow: unset !important;
+  padding: 0!important;
+}
